src/objects/AdminSetting__c.object
<CustomObject>
    <fields>
        <fullName>Active_Flows__c</fullName>
        <label>Active_Flows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Force_Com_Site__c</fullName>
        <label>Active_Force_Com_Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Api_Request_Uses__c</fullName>
        <label>Api_Request_Uses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Api_Request__c</fullName>
        <label>Api_Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Char_Used_In_Code__c</fullName>
        <label>Char_Used_In_Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Apps__c</fullName>
        <label>Custom_Apps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Objects__c</fullName>
        <label>Custom_Objects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Tabs__c</fullName>
        <label>Custom_Tabs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Storage_Uses__c</fullName>
        <label>Data_Storage_Uses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <label>Data_Storage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edition_Name__c</fullName>
        <label>Edition_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lic_Chatter_Free__c</fullName>
        <label>Lic_Chatter_Free</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lic_Customer_Community_Plus__c</fullName>
        <label>Lic_Customer_Community_Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lic_Salesforce__c</fullName>
        <label>Lic_Salesforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Release_Name__c</fullName>
        <label>Org_Release_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <label>Release_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rules__c</fullName>
        <label>Rules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AdminSetting</label>
    <nameField>
        <label>AdminSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdminSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>